--- a/src/app/update-etudiant/update-etudiant.component.html
+++ b/src/app/update-etudiant/update-etudiant.component.html
@@ -29,8 +29,8 @@
   <div class="col-sm-4 col-md-4 col-lg-4">
     <label >Section</label>
     <input type="text"
-    [ngModel]="currentEtudiant.Section"
-    name="Section" class="form-control">
+    [ngModel]="currentEtudiant.section"
+    name="section" class="form-control">
 </div>
 
 
