--- a/src/app/add-etudiant/add-etudiant.component.html
+++ b/src/app/add-etudiant/add-etudiant.component.html
@@ -23,7 +23,7 @@
     </div>
     <div class="col-sm-4 col-md-4 col-lg-4">
       <label >Section</label>
-      <input type="text" [(ngModel)]="newEtudiant.Section" name="Section" class="form-control">
+      <input type="text" [(ngModel)]="newEtudiant.section" name="Section" class="form-control">
       </div>
     <div class="mt-2">
     <button type="submit" (click)="addEtudiant()" class="btn btn-success">Ajouter</button>
