--- a/src/app/add-etudiant/add-etudiant.component.html
+++ b/src/app/add-etudiant/add-etudiant.component.html
@@ -2,12 +2,12 @@
 <div class="container mt-5">
 
   <div>
-  <h2>Ajouter un Etudiant :</h2>
+  <h2 class="mb-5 title">Ajouter un Etudiant :</h2>
   </div>
   <form >
     <div class="col-sm-4 col-md-4 col-lg-4">
     <label >ID Etudiant</label>
-    <input type="text" [(ngModel)]= "newEtudiant.idEtudiant" name="idEtudiant" class="form-control">
+    <input disabled type="text" [(ngModel)]= "newEtudiant.idEtudiant" name="idEtudiant" class="form-control">
     </div>
     <div class="col-sm-4 col-md-4 col-lg-4" >
     <label >Nom Etudiant</label>
@@ -25,7 +25,14 @@
       <label >Section</label>
       <input type="text" [(ngModel)]="newEtudiant.section" name="Section" class="form-control">
       </div>
-    <div class="mt-2">
+      <div class="col-sm-4 col-md-4 col-lg-4">
+        <label>Université </label>
+        <select class="form-control" id="idUni" [(ngModel)]="newEtudiant.universite" [ngModelOptions]="{standalone: true}">
+                <option>--Select Université--</option>
+                <option  *ngFor="let uni of universityList" [ngValue]="uni">{{uni.nom}}</option>
+            </select>
+        </div>
+    <div class="col-sm-4 btn">
     <button type="submit" (click)="addEtudiant()" class="btn btn-success">Ajouter</button>
     </div>
     </form>
