--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,24 +7,34 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/etudiants">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" routerLink="/etudiants">Etudiants <span class="sr-only">(current)</span></a>
       </li>
-      
-      <li class="nav-item dropdown">
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/universities">Universités <span class="sr-only">(current)</span></a>
+      </li>
+
+      <li class="nav-item dropdown active">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
-          Crud
+          Crud Etudiant
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" routerLink="/add-etudiant">Ajout</a>
-          <a class="dropdown-item" href="#">Modification</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Suppression</a>
+
         </div>
       </li>
-      <li class="nav-item">
-        <a class="nav-link">Login</a>
+      <li class="nav-item dropdown active">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+          Crud Université
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" routerLink="/add-university">Ajout</a>
+       
+        </div>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/login">Login</a>
+      </li>
+      <li class="nav-item active">
         <a class="nav-link">Register</a>
       </li>
     </ul>
